WikiExtrasPlugin/0.13.1dev: boxes corrected (center-alignment) and prepared to use wikiprocessor flags (yet to be introduced in Trac 0.13dev)
Many thanks to cboos for providing this patch!

(How to use flags, instead of parameters, will be documented once wikiprocessor flags are introduced in Trac 0.13dev)

git-svn-id: https://trac-hacks.org/svn@10348 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/wikiextrasplugin/trunk/tracwikiextras/htdocs/css/boxes.css
+++ b/wikiextrasplugin/trunk/tracwikiextras/htdocs/css/boxes.css
@@ -83,6 +83,8 @@
 
 /* Box alignment */
 .wikiextras.box.center {
+    margin: 1em auto;
+    display: table;
 }
 .wikiextras.box.left {
     clear: left;
@@ -102,10 +104,6 @@
 /* Box for presentation of image */
 .wikiextras.box.image {
     text-align: center;
-}
-table.wikiextras.center-box {
-    margin: 1em 0;
-    width: 100%;
 }
 
 /* Colored boxes */
